# pyaging

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  LICENSE.txt  Makefile  README.md  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py  update_package.sh
.cursor/rules/: best-practices.mdc
.github/workflows/: build.yml  ci-cd.yml  publish.yml  release.yml  test.yml
clocks/: join_metadata.py  update_all_clocks.py
clocks/metadata/: join_metadata.ipynb
clocks/notebooks/: altumage.ipynb  bitage.ipynb  blood_chemistry.pkl  cabec.ipynb  camilloh3k27ac.ipynb  camilloh3k27me3.ipynb  camilloh3k36me3.ipynb  camilloh3k4me1.ipynb  camilloh3k4me3.ipynb  camilloh3k9ac.ipynb  camilloh3k9me3.ipynb  camillopanhistone.ipynb  coefficients.xlsx  cpgptgrimage3.ipynb  cpgptpcgrimage3.ipynb  deconvolutebloodepicbcell.ipynb  deconvolutebloodepicmonocyte.ipynb  deconvolutebloodepicnkcell.ipynb  dnamfitage.ipynb  dnamfitagegaitf.ipynb  dnamfitagegripf.ipynb  dnamfitagegripm.ipynb  dnamfitagevo2max.ipynb  dnamphenoage.ipynb  dnamtl.ipynb  dunedinpace.ipynb  eabec.ipynb  encen100+.ipynb  encen100.ipynb  encen40+.ipynb  encen40.ipynb  ensembleagestatic.ipynb  ensembleagestatictop.ipynb  epitoc1.ipynb  grimage.ipynb  grimage2.ipynb  grimage2adm.ipynb  grimage2b2m.ipynb  grimage2cystatinc.ipynb  grimage2gdf15.ipynb  (+88 more)
clocks/notebooks2/: bitage.ipynb  camilloh3k27ac.ipynb  camilloh3k36me3.ipynb  camilloh3k4me1.ipynb  camilloh3k9ac.ipynb  camilloh3k9me3.ipynb  camillopanhistone.ipynb  dnamtl.ipynb  dunedinpace.ipynb  encen100.ipynb  encen40.ipynb  han.ipynb  hannum.ipynb  horvath2013.ipynb  knight.ipynb  leecontrol.ipynb  leerefinedrobust.ipynb  leerobust.ipynb  mammalian1.ipynb  mammalian3.ipynb  mammalianlifespan.ipynb  meer.ipynb  ocampoatac1.ipynb  pcgrimage.ipynb  pchorvath2013.ipynb  pcphenoage.ipynb  pcskinandblood.ipynb  petkovich.ipynb  replitali.ipynb  skinandblood.ipynb  thompson.ipynb  zhangen.ipynb  zhangmortality.ipynb
docs/: Makefile  conf.py  environment.yml  index.rst  make_clock_table.py  requirements.txt
docs/_static/: clock_glossary.csv  clock_glossary.js  clock_table.txt  custom.css  df.pkl
docs/source/: clock_glossary.rst  clock_implementation.rst  clock_notebooks  conf.py  index.rst  installation.ipynb  installation.rst  introduction.ipynb  make_clock_glossary.py  make_clock_table.py  pyaging.data.rst  pyaging.models.rst  pyaging.predict.rst  pyaging.preprocess.rst  pyaging.rst  pyaging.utils.rst  tutorial_atac.nblink  tutorial_atacseq.nblink  tutorial_bloodchemistry.nblink  tutorial_dnam.nblink  tutorial_histonemark.nblink  tutorial_histonemarkchipseq.nblink  tutorial_methylation.nblink  tutorial_rnaseq.nblink  tutorial_transcriptomics.nblink  tutorial_utils.nblink
docs/source/_static/: clock_glossary.csv
docs/source/clock_notebooks/: abec.ipynb  altumage.ipynb  bitage.ipynb  cabec.ipynb  camilloh3k27ac.ipynb  camilloh3k27me3.ipynb  camilloh3k36me3.ipynb  camilloh3k4me1.ipynb  camilloh3k4me3.ipynb  camilloh3k9ac.ipynb  camilloh3k9me3.ipynb  camillopanhistone.ipynb  cpgptgrimage3.ipynb  cpgptpcgrimage3.ipynb  deconvolutebloodepiccd4tcell.ipynb  deconvolutebloodepiccd8tcell.ipynb  deconvolutebloodepicneutrophil.ipynb  dnamfitage.ipynb  dnamfitagegaitf.ipynb  dnamfitagegaitm.ipynb  dnamfitagegripm.ipynb  dnamic.ipynb  dnamphenoage.ipynb  dnamtl.ipynb  dunedinpace.ipynb  encen100.ipynb  encen40.ipynb  epitoc2.ipynb  grimage.ipynb  grimage2.ipynb  grimage2adm.ipynb  grimage2b2m.ipynb  grimage2cystatinc.ipynb  grimage2loga1c.ipynb  grimage2packyrs.ipynb  grimage2pai1.ipynb  han.ipynb  hannum.ipynb  horvath2013.ipynb  hrsinchphenoage.ipynb  (+72 more)
docs/source/tutorials/: tutorial_bloodchemistry.ipynb  tutorial_cpgptgrimage3.ipynb  tutorial_dnam_illumina_human_array.ipynb  tutorial_dnam_illumina_mammalian_array.ipynb  tutorial_dnam_rrbs.ipynb  tutorial_histonemarkchipseq.ipynb  tutorial_utils.ipynb
pyaging/: __init__.py
pyaging/data/: __init__.py  _data.py
pyaging/logger/: __init__.py  _logger.py
pyaging/models/: __init__.py  _base_models.py  _models.py
pyaging/predict/: __init__.py  _postprocessing.py  _pred.py  _pred_utils.py  _preprocessing.py
pyaging/preprocess/: __init__.py  _preprocess.py  _preprocess_utils.py
pyaging/utils/: __init__.py  _utils.py
tests/: atac_peaks_test.csv  blood_chemistry_test.csv  c_elegans_rnaseq_test.csv  chip_seq_test.csv  test_basic.py  test_utils.py  tests.py
tests/predict/: test_gold_standard.py
tests/utils/: test_utils.py
tutorials/: tutorial_atac.ipynb  tutorial_atacseq.ipynb  tutorial_bloodchemistry.ipynb  tutorial_cpgptgrimage3.ipynb  tutorial_dnam.ipynb  tutorial_dnam_illumina_human_array.ipynb  tutorial_dnam_illumina_mammalian_array.ipynb  tutorial_dnam_rrbs.ipynb  tutorial_histonemark.ipynb  tutorial_histonemarkchipseq.ipynb  tutorial_methylation.ipynb  tutorial_rnaseq.ipynb  tutorial_transcriptomics.ipynb  tutorial_utils.ipynb
