[tool.poetry]
name = "pyaging"
version = "0.1.13"
description = "A Python-based compendium of GPU-optimized aging clocks."
authors = ["Lucas Paulo de Lima Camillo <lucas_camillo@alumni.brown.edu>"]
license = "BSD"
readme = "README.md"

[tool.poetry.urls]
homepage = "https://github.com/rsinghlab/pyaging"
repository = "https://github.com/rsinghlab/pyaging"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scikit-learn = "^1.3.2"
pandas = ">=2.2.0"
torch = ">=2.2.0"
numpy = ">=2.0.0"
anndata = "^0.10.3"
ipykernel = "^6.29.0"

[tool.poetry.dev-dependencies]
sphinx = "^7.1.2"
sphinx-rtd-theme = "^1.3.0rc1"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-copybutton = "^0.5.2"
sphinx-book-theme = "^1.1.0"
sphinx-issues = "^3.0.1"
sphinx-design = "^0.5.0"
scanpydoc = "^0.10.0"
myst-parser = "^2.0.0"
nbsphinx = "^0.8.11"
pygments = "^2.6.1"
pytest = "^7.2.0"
nbmake = "^1.4.6"
pyBigWig = {version = "^0.3.23", optional = true}

[tool.poetry.scripts]
pyaging = "pyaging:main"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "ipykernel", "nbsphinx", "pygments"]
histone = ["pyBigWig"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    #"F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"