[project]
name = "pyaging"
version = "0.1.30"
description = "A Python-based compendium of GPU-optimized aging clocks."
authors = [
    {name = "Lucas Paulo de Lima Camillo", email = "lucas_camillo@alumni.brown.edu"}
]
license = {text = "BSD"}
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "scikit-learn>=1.3.2",
    "pandas>=2.2.0",
    "torch>=2.2.0",
    "numpy>=2.0.0",
    "anndata>=0.10.3",
    "ipykernel>=6.29.0",
    "requests",
    "ruff>=0.14.6",
    "tox>=4.30.3",
    "marimo[recommended]>=0.17.6",
    "matplotlib>=3.9.4",
    "polars>=1.35.2",
    "openai>=2.8.1",
    "pyarrow>=21.0.0",
    "plotly>=6.5.0",
]

[project.urls]
homepage = "https://github.com/rsinghlab/pyaging"
repository = "https://github.com/rsinghlab/pyaging"

[project.scripts]
pyaging = "pyaging:main"

[project.optional-dependencies]
docs = [
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=1.3.0rc1",
    "sphinx-autodoc-typehints>=1.12.0",
    "ipykernel>=6.29.0",
    "nbsphinx>=0.8.11",
    "pygments>=2.6.1"
]
histone = ["pyBigWig>=0.3.23"]

[dependency-groups]
dev = [
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=1.3.0rc1",
    "sphinx-autodoc-typehints>=1.12.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-book-theme>=1.1.0",
    "sphinx-issues>=3.0.1",
    "sphinx-design>=0.5.0",
    "scanpydoc>=0.10.0",
    "myst-parser>=2.0.0",
    "nbsphinx>=0.8.11",
    "pygments>=2.6.1",
    "pytest>=7.2.0",
    "nbmake>=1.4.6",
    "pyBigWig>=0.3.23",
    "tox>=4.25.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    #"F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
docstring-code-format = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311,312,313}
skip_missing_interpreters = true

[testenv]
description = run tests
deps =
    pytest
    nbmake
    zarr
    scikit-learn>=1.3.2
    pandas>=2.2.0
    torch>=2.2.0
    numpy>=2.0.0
    anndata>=0.10.3
    ipykernel>=6.29.0
    requests
commands = pytest tests/
"""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
